Delta versioon 3.5.1.18
Selle versiooniga tulevad kaasa järgmised täiendused ja parandused:
* PPA109: Ebaõnnestunud saatmised
* DLSeadist, PPA018, PPA064, PPA065: Süsteemne andmeväljade grupp "Juurdepääsupiirang"
* PPA129: Meiliteavituste välja saatmisel puhkepäevade arvestamine
* T024-314 Teavitava e-maili mall
* PPA066: Wordi mallist dokumendi korduvalt loomine (järg)
* PPA028; PPA120; PPA121; PPA126; : Mallide halduse täiendused (järg)
* PPA150: tühja tööülesannete menüüpunkti kuvamine
* Arutelu permissioni muudatus, arutellu kutsumisel dok/failide vaatamisõiguse andmine
* T024-315 Dokumendi liigi seadistamise vaates puuduvad märkeruudud
* Struktuuriüksuse järgi filtreerimine tööülesannete otsingus
* PPA007: täitmata dokumendi väljade kuvamine mittemuudetavas vaates
* Struktuuriüksuse järgi filtreerimine dokumentide otsingus
* DLSeadist: Struktuuriüksuse väljatüüp + otsing struktuuriüksuste hulgast (modaal)
* Kasutaja/struktuuriüksuse andmetes organizationPath tüübi muutmine, AMR liidese korrektuur
* PPA061: Kooskõlastusmärked blokis info faili versiooni kohta
* PPAJT005: Kooskõlastusmärgete printimine
* Dokumendi asukoha muutmisel ümberliigitamine vs ümberregistreerimine
* PPA006: Dokumendi ümberliigitamise täiendused
* DLSeadist, PPA041, PPA042: Süsteemne andmeväljade grupp "Siselähetuse taotleja"
* DLSeadist, PPA024, PPA041, PPA044, PPA042: Süsteemne andmeväljade grupp "Välislähetuse taotleja"
* Tööülesannete otsingu salvestamine ebaõnnestub, kui muuhulgas on täidetud filtriväli "Dokumendi liik"
* Piiratud Delta kasutajate pärimine AMR’ist, link tavalise ja piiratud Delta vahel
* Organisatsiooni andmete täiendused
* Vastutaja struktuuriüksuse kuvamine nimekirjades "Registreerimiseks" ja "Saatmata dokumendid"
* PPA: Arhiivimoodustaja tasand
* Struktuuriüksuste põhiste kasutajagruppide automaatne loomine
* MSO service viga
* Ühine taustatöö kasutajate, -gruppide ja struktuuriüksuste uuendamiseks Active Directory'ist ja AMR'ist
* PPA026: Dokumendi kustutamise täi